--- a/app/src/main/res/layout/widget_txa_music_small.xml
+++ b/app/src/main/res/layout/widget_txa_music_small.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/widget_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/widget_background"
+    android:background="#1A1A1A"
     android:orientation="horizontal"
     android:padding="4dp"
-    android:gravity="center_vertical"
-    android:clipToOutline="true">
+    android:gravity="center_vertical">
 
     <ImageView
         android:id="@+id/widget_album_art"
@@ -15,9 +13,8 @@
         android:layout_height="48dp"
         android:layout_margin="4dp"
         android:scaleType="centerCrop"
-        android:background="@drawable/widget_album_art_bg"
-        android:src="@drawable/ic_default_album_art"
-        android:clipToOutline="true" />
+        android:background="#20FFFFFF"
+        android:src="@drawable/ic_default_album_art" />
 
     <LinearLayout
         android:id="@+id/widget_media_titles"
@@ -43,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:text="Tap to play"
+            android:text="Artist"
             android:textColor="#B0B0B0"
             android:textSize="11sp" />
     </LinearLayout>
