--- a/app/src/main/res/layout/widget_txa_music_small.xml
+++ b/app/src/main/res/layout/widget_txa_music_small.xml
@@ -4,17 +4,34 @@
     android:layout_height="match_parent"
     android:background="#1A1A1A"
     android:orientation="horizontal"
-    android:padding="4dp"
+    android:padding="6dp"
     android:gravity="center_vertical">
 
-    <ImageView
-        android:id="@+id/widget_album_art"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="4dp"
-        android:scaleType="centerCrop"
-        android:background="#20FFFFFF"
-        android:src="@drawable/ic_default_album_art" />
+    <!-- Small Album Art with Circle Progress -->
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="2dp">
+
+        <ProgressBar
+            android:id="@+id/widget_circle_progress"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_gravity="center"
+            android:max="100"
+            android:progress="0"
+            android:progressDrawable="@drawable/widget_circle_progress_drawable" />
+
+        <ImageView
+            android:id="@+id/widget_album_art"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:background="@drawable/widget_album_art_bg"
+            android:src="@drawable/ic_default_album_art" />
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/widget_media_titles"
@@ -22,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:layout_marginStart="8dp">
+        android:layout_marginStart="10dp">
 
         <TextView
             android:id="@+id/widget_title"
