--- a/app/src/main/res/xml/app_widget_small_info.xml
+++ b/app/src/main/res/xml/app_widget_small_info.xml
@@ -2,12 +2,12 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/widget_txa_music_small"
     android:minWidth="250dp"
-    android:minHeight="40dp"
-    android:minResizeWidth="180dp"
-    android:minResizeHeight="40dp"
+    android:minHeight="110dp"
+    android:minResizeWidth="110dp"
+    android:minResizeHeight="110dp"
     android:targetCellWidth="4"
-    android:targetCellHeight="1"
-    android:resizeMode="horizontal"
+    android:targetCellHeight="2"
+    android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen"
     android:previewImage="@drawable/widget_small_preview"
     android:description="@string/widget_small_desc"
