--- a/app/src/main/res/layout/widget_txa_music_mini.xml
+++ b/app/src/main/res/layout/widget_txa_music_mini.xml
@@ -28,5 +28,16 @@
             android:scaleType="centerCrop"
             android:background="@drawable/widget_album_art_bg"
             android:src="@drawable/ic_default_album_art" />
+
+        <!-- Play/Pause Overlay Button -->
+        <ImageButton
+            android:id="@+id/widget_btn_play_pause"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
+            android:background="@drawable/widget_button_circle_bg"
+            android:src="@drawable/ic_play_widget"
+            android:scaleType="centerInside"
+            android:alpha="0.8" />
     </FrameLayout>
 </FrameLayout>
