--- a/app/src/main/res/layout/widget_txa_music_big.xml
+++ b/app/src/main/res/layout/widget_txa_music_big.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/widget_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#1A1A1A">
+
+    <!-- Gradient Background (Dynamic) -->
+    <ImageView
+        android:id="@+id/widget_gradient_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:alpha="0.85" />
 
     <!-- Big Background Album Art (blurred overlay style) -->
     <ImageView
@@ -166,4 +174,4 @@
                 android:scaleType="centerInside" />
         </LinearLayout>
     </LinearLayout>
-</RelativeLayout>
+</FrameLayout>
