--- a/app/src/main/res/layout/widget_txa_music_mini.xml
+++ b/app/src/main/res/layout/widget_txa_music_mini.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/widget_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent">
+
+    <!-- Gradient Background (Dynamic) -->
+    <ImageView
+        android:id="@+id/widget_gradient_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:alpha="0.85" />
 
     <FrameLayout
         android:layout_width="140dp"
