--- a/app/src/main/res/layout/widget_txa_music_mini.xml
+++ b/app/src/main/res/layout/widget_txa_music_mini.xml
@@ -13,27 +13,29 @@
         android:scaleType="fitXY"
         android:alpha="0.85" />
 
+    <!-- Progress & Art Container: Responsive -->
     <FrameLayout
-        android:layout_width="140dp"
-        android:layout_height="140dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:background="#1A1A1A"
-        android:padding="4dp">
+        android:padding="8dp">
 
         <ProgressBar
             android:id="@+id/widget_circle_progress"
             style="@android:style/Widget.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:max="100"
             android:progress="0"
             android:progressDrawable="@drawable/widget_circle_progress_drawable" />
 
         <ImageView
             android:id="@+id/widget_album_art"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_margin="10dp"
             android:scaleType="centerCrop"
             android:background="@drawable/widget_album_art_bg"
             android:src="@drawable/ic_default_album_art" />
