--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="bottom_nav_height">80dp</dimen>
     <dimen name="bottom_nav_mini_player_height">144dp</dimen>
     <dimen name="now_playing_top_margin">12dp</dimen>
+    <dimen name="tab_height">48dp</dimen>
 </resources>
