--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -125,6 +125,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <!-- Library Hub (Compose View) -->
+            <androidx.compose.ui.platform.ComposeView
+                android:id="@+id/libraryHubComposeView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <!-- Top Tracks Section (Compose View) -->
             <androidx.compose.ui.platform.ComposeView
                 android:id="@+id/topTracksComposeView"
